--- a/client/styles/Home.module.css
+++ b/client/styles/Home.module.css
@@ -1,6 +1,7 @@
 .container{
     width: 100%;
     height: 100%;
+    font-family: 'Inter';
 }
 
 
@@ -9,4 +10,11 @@
     text-align: center;
     font-size: 64px;
     color: #2b2b2b;
+    margin-bottom: 0;
+}
+
+.h3{
+    color: #2b2b2b;
+    text-align: center;
+    margin-bottom: 2em;
 }
