--- a/client/styles/globals.scss
+++ b/client/styles/globals.scss
@@ -24,6 +24,7 @@ a {
 table {
   border-collapse: collapse;
   width: 100%;
+  
 }
 
 th,
@@ -31,11 +32,12 @@ td {
   border: 1px solid #ffffff;
   text-align: left;
   padding: 8px;
-  font-size: 32px;
+  font-size: 24px;
 }
 
 th {
   background-color: rgb(117, 201, 250);
+  height: 100px;
 }
 
 td {
@@ -53,7 +55,7 @@ form td:last-child {
 }
 
 form * {
-  font-size: 28px;
+  font-size: 22px;
 }
 
 .pagination-container {
